--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@telegram-apps/sdk": "^1.1.3",
+    "aws-sdk": "^2.1692.0",
     "lightweight-charts": "^4.2.0",
     "next": "14.2.7",
     "react": "^18",
