--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.699.0",
+    "@aws-sdk/credential-provider-env": "^3.696.0",
     "@telegram-apps/sdk": "^1.1.3",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.5",
