--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.5",
     "lightweight-charts": "^4.2.0",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
