--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tfactory_app",
-  "version": "1.1.140",
+  "version": "1.1.141",
   "private": true,
   "scripts": {
     "prebuild": "node ./scripts/updateVersion.js",
@@ -14,13 +14,17 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.699.0",
     "@aws-sdk/credential-provider-env": "^3.696.0",
+    "@chakra-ui/react": "^3.21.1",
+    "@emotion/react": "^11.14.0",
     "@telegram-apps/sdk": "^1.1.3",
     "aws-sdk": "^2.1692.0",
     "dotenv": "^16.4.5",
     "lightweight-charts": "^4.2.0",
-    "next": "^15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^15.3.4",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
